--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <title>Rock Paper Scissors</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="./js/game.js"></script>
+    <script src="./js/game.js" defer></script>
   </head>
   <body>
+    <div id="selection">
+      <button id='rock'>Rock</button>
+      <button id='paper'>Paper</button>
+      <button id='scissors'>Scissors</button>
+    </div>
   </body>
 </html>
