--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="content">
       <div class="status">
         <p id='who-wins'>Selecciona uno para empezar</p>
-        <p id='info'>El mejor de 5 rondas gana</p>
+        <p id='info'>El primero en llegar a 5 gana</p>
       </div>
       <div class="battle">
         <div class="card" id='user'>
