--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     </div>
     <div class="content">
       <div class="status">
-        <p id='who-wins'>Selecciona uno para empezar</p>
-        <p id='info'>El primero en llegar a 5 gana</p>
+        <p id='who-wins'>Select to start</p>
+        <p id='info'>The first to reach 5 wins</p>
       </div>
       <div class="battle">
         <div class="card" id='user'>
           <p class='item'>?</p>
-          <p class='wins'>Usuario: 0</p>
+          <p class='wins'>User: 0</p>
         </div>
         <div class="card" id='computer'>
           <p class='item'>?</p>
-          <p class='wins'>Computadora: 0</p>
+          <p class='wins'>Computer: 0</p>
         </div>
       </div>
       <div id="selection">
